<resources>
    <string name="app_name">Agregator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grzegorz Kowaluk</string>
    <string name="nav_header_subtitle">https://github.com/grzegorzKowaluk/androidAgregator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_task01">Zadanie 1</string>
    <string name="menu_task02">Zadanie 2</string>
    <string name="menu_task03">Zadanie 3</string>
    <string name="menu_task04">Zadanie 4</string>
    <string name="menu_task05">Zadanie 5</string>
    <string name="menu_task06">Zadanie 6</string>
    <string name="menu_task07">Zadanie 7</string>
    <string name="menu_task08">Zadanie 8</string>
    <string name="menu_task09">Zadanie 9</string>
    <string name="menu_task10">Zadanie 10</string>
    <string name="menu_task11">Zadanie 11</string>
    <string name="menu_task12">Zadanie 12</string>
    <string name="menu_task13">Zadanie 13</string>
    <string name="menu_task14">Zadanie 14</string>
    <string name="menu_task15">Zadanie 15</string>
    <string name="menu_task16">Zadanie 16</string>

</resources>